feat: component optimization

--- a/src/components/base/Empty/Empty.module.less
+++ b/src/components/base/Empty/Empty.module.less
@@ -1,3 +1,14 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.icon-cotainer {
+  display: flex;
+}
+
 .empty-img-simple {
   height: 100%;
   margin: auto;
