--- a/src/components/base/Drawer/Drawer.module.less
+++ b/src/components/base/Drawer/Drawer.module.less
@@ -24,6 +24,17 @@
   background-clip: padding-box;
   border: 0;
   transition: all 0.5s ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  width: 100%;
+  height: 100%;
 }
 
 .drawer-header {
