fix: base components

--- a/src/components/base/Collapse/Collspase.module.less
+++ b/src/components/base/Collapse/Collspase.module.less
@@ -55,7 +55,5 @@
   color: rgba(0, 0, 0, 0.85);
   background-color: #fff;
   border-top: 1px solid #d9d9d9;
-}
-.content-hidden {
-  display: none;
+  transition: all 0.3s ease;
 }
