--- a/src/components/base/Drawer/Drawer.module.less
+++ b/src/components/base/Drawer/Drawer.module.less
@@ -13,7 +13,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  transition: all 0.5s ease;
+  transition: all 0.3s ease-out;
 }
 
 .drawer {
@@ -23,7 +23,7 @@
   background-color: #fff;
   background-clip: padding-box;
   border: 0;
-  transition: all 0.5s ease;
+  transition: all 0.5s ease-out;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
