fix: table tr color

--- a/src/components/base/Table/Table.module.less
+++ b/src/components/base/Table/Table.module.less
@@ -92,7 +92,6 @@
   color: rgba(0, 0, 0, 0.85);
   font-weight: 500;
   text-align: left;
-  background: #fafafa;
   border-bottom: 1px solid #f0f0f0;
   position: relative;
   padding: 16px 16px;
@@ -100,8 +99,14 @@
 }
 
 .tr {
+  background-color: #ffffff;
   height: 0px;
 }
-.td {
-  background-color: #ffffff;
+
+.tr-dark {
+  background-color: #fafafa;
+}
+
+.tr:hover {
+  background-color: rgb(243, 246, 249);
 }
