fix: base component pop-over

--- a/src/components/base/Popover/Popover.module.less
+++ b/src/components/base/Popover/Popover.module.less
@@ -1,5 +1,4 @@
 .content {
-  position: absolute;
   transform: translate(-50%, 50%);
   transform-origin: 50% 60px;
   box-sizing: border-box;
@@ -12,7 +11,7 @@
   list-style: none;
   -webkit-font-feature-settings: "tnum";
   font-feature-settings: "tnum";
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 1030;
